Minor updates to view and test db

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,14 @@
             margin: 5px;
             background-color: #f3f3f3
         }
+    table {
+            border-collapse: separate;
+            border-spacing: 50px 0;
+        }
+
+    td {
+        padding: 10px 0;
+        }
 </style>
 <body>
 	<center><h3>Change Request Form</h3>
