--- a/templates/view.html
+++ b/templates/view.html
@@ -15,9 +15,12 @@
         <h4>Title: {{data.title}}</h4><br>
         <h4>Summary</h4><br>
         <p>{{data.summary}}</p><br><br>
+        <h4>Status: {{data.status}}</h4><br>
         <h4>Date: {{data.created_at}}</h4><br><br>
         <a href="/" type="button">Home</a>
     </center>
     
 </body>
 </html>
+
+
