--- a/templates/view.html
+++ b/templates/view.html
@@ -11,10 +11,10 @@
         <h3>Change Request Form CR #{{data.id}}</h3>
         <br>
         <br>
-        <h4>User Name: {{data.username}}</h4><br><br>
-        <h4>Title: {{data.title}}</h4><br>
-        <h4>Summary</h4><br>
-        <p>{{data.summary}}</p><br><br>
+        <h4>User Name: {{data.username}}</h4><br>
+        <h4>Title: {{data.title}}</h4>
+        <h4>Summary</h4>
+        <p>{{data.summary}}</p><br>
         <h4>Status: {{data.status}}</h4><br>
         <h4>Date: {{data.created_at}}</h4><br><br>
         <a href="/" type="button">Home</a>
