--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -11,5 +11,36 @@
 
 .custom-editor {
     width: 600px;
-    height: 400px; /* Set the desired width here */
+     /* Set the desired width here */
   }
+
+
+  /* Add this CSS to your stylesheet or component */
+.highlighted-row:hover {
+  background-color: #f5f5f5; /* Change the color to your preference */
+  cursor: pointer;
+}
+
+
+/* Add this CSS to your stylesheet or component */
+.popup-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000; /* Adjust the z-index as needed */
+}
+
+.popup-card {
+  background-color: white;
+  padding: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  max-width: 80%;
+  max-height: 80%;
+  overflow: auto;
+}
