--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -21,6 +21,34 @@
   cursor: pointer;
 }
 
+/* table.css */
+
+.nice-table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-bottom: 20px;
+}
+
+.nice-table th, .nice-table td {
+  border: 1px solid #ddd;
+  padding: 8px;
+  text-align: left;
+}
+
+.nice-table th {
+  background-color: #f2f2f2;
+  font-weight: bold;
+}
+
+.nice-table tbody tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+.nice-table tbody tr:hover {
+  background-color: #ddd;
+}
+
+
 
 /* Add this CSS to your stylesheet or component */
 .popup-overlay {
@@ -43,4 +71,67 @@
   max-width: 80%;
   max-height: 80%;
   overflow: auto;
+}
+
+
+  /* styles.css or your CSS file */
+  .row-container {
+    display: flex;
+    cursor: pointer;
+    padding: 8px;
+    border-bottom: 1px solid #ddd;
+    transition: background-color 0.2s;
+  }
+  
+  .row-container:hover {
+    background-color: #f2f2f2;
+  }
+  
+  .highlighted-row {
+    background-color: #f2f2f2;
+  }
+  
+  /* styles.css or your CSS file */
+.row-clickable {
+  cursor: pointer;
+}
+
+.row-clickable:hover {
+  background-color: #f2f2f2;
+}
+
+
+/* styles.css or your CSS file */
+.popup-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.popup-card {
+  background-color: white;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+}
+
+.ql-container {
+  min-height: 10rem;
+  height: 100%;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.ql-editor {
+  height: 400px !important;
+  /* flex: 1; */
+  /* overflow-y: auto; */
+  width: 100%;
 }
