Local electron-react indexedDB app initial working react app. Pending desktop build.

--- a/cr_react_app/src/styles.css
+++ b/cr_react_app/src/styles.css
@@ -135,3 +135,10 @@
   /* overflow-y: auto; */
   width: 100%;
 }
+
+.demoPage1{
+  background-color: green;
+}
+.demoPage2{
+  background-color: orange;
+}
