--- a/cr_react_app/src/styles.css
+++ b/cr_react_app/src/styles.css
@@ -14,6 +14,12 @@
      /* Set the desired width here */
   }
 
+  .inputField{
+    font-size: 30px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+
 
   /* Add this CSS to your stylesheet or component */
 .highlighted-row:hover {
@@ -142,3 +148,22 @@
 .demoPage2{
   background-color: orange;
 }
+
+.button {
+  background-color:grey; /* Green */
+  border: none;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
+.button0 {padding: 5px 10px;}
+.button1 {padding: 10px 24px;}
+.button2 {padding: 12px 28px;}
+.button3 {padding: 14px 40px;}
+.button4 {padding: 32px 16px;}
+.button5 {padding: 16px;}
