Basic functionality working. Pending tasks include restting cr_id per project.

--- a/cr_react_app/src/styles.css
+++ b/cr_react_app/src/styles.css
@@ -79,6 +79,11 @@
   overflow: auto;
 }
 
+.popup-card .modal-body img {
+  max-width: 100%;
+  height: auto;
+}
+
 
   /* styles.css or your CSS file */
   .row-container {
