Refactor + Bugfixes. Modal to display A4 size on view. Data flow fixes for google oauth sign in

--- a/cr_react_app/src/styles.css
+++ b/cr_react_app/src/styles.css
@@ -70,6 +70,13 @@
   z-index: 1000; /* Adjust the z-index as needed */
 }
 
+.modal-dialog{
+  max-width: 794px !important;
+  max-height: 1123px !important;
+  overflow-y: auto !important;
+  margin:auto !important;
+}
+
 .modal-dialog img {
   max-width: 90% !important;
   height: auto !important;
